Make page translations list wrap instead of overflowing the footer (bug #23756)

--- a/start/1.12/styles/westin.css
+++ b/start/1.12/styles/westin.css
@@ -160,7 +160,7 @@ body {
 }
 
 #footer li {
-  display: inline;
+  display: inline-block;
   margin: 0;
   padding: 0 1em 0 0;
   list-style: none;
